--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "store2": "^2.14.2"
   }
 }
